# qchen-fdii-cardc.github.io

./: .gitignore  .gitmodules  CNAME  README.md  config.toml  hugo.toml  index.html  mrsmss.md
.github/workflows/: hogu.yml
archetypes/: default.md
content/posts/: 001-rude-start-application.md  002-curious-looking-around.md  002-lazy-process.md  003-upsidedown-infix.md  004-perfect.md  005-explore-lisp.md  006-sequence-in-lisp.md  007-recursive-eq.md  008-expression.md  008-real-app.md  009-expression.md  00x-curious-looking-around.md  010-appendix-cl-symbols.md  010-smart-cl-classification.md  011-functions.md  012-1am-tutor.md  013-sequences.md  Intro.md  lisp-plan.md
content/slides/: learning_programming.md
legacy/: README.md  old-index.html
public/: 404.html  index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/posts/: index.html  index.xml
public/tags/: index.html  index.xml
scripts/: fix_equations.py
static/cpp/concept/gcd/: CMakeLists.txt  gcd.hpp  main.cpp  rational.hpp
static/dotnet/: Program.cs  kk.rsp  log.txt
static/javascript/: HumidAirCalculation.js  coolprop-first-example.html  coolprop-first.js  eval.html  fact-style.css  fact.html  fact.js  humidAir.html
static/jetpack-imgs/: compose-desktop-1.jpg:Zone.Identifier
static/lisp-code/: build-retro-games.lisp  eight-queens.lisp  eight_queens.lisp  expression.lisp  lexical-binding.lisp  matrix.lisp  matrix2.lisp  matrix3.lisp  matrix4.lisp  matrix5.lisp  matrix6.lisp  matrix7.lisp  mr-smart-make-references-cl.lisp  retro-games.lisp  retro.css  sequence-tutor.lisp  special-operators.lisp
static/matlab-code/: addVertexMeshing.m  aref.m  ballOnPeaksContour.m  buildStandaloneApp.m  cadqueryEditor.m  cellref.m  chainReaction.m  comaprison-10.mat  comaprison-13.mat  comaprison-14.mat  comaprison-16.mat  comaprison-20.mat  comaprison-4.mat  comaprison-8.mat  comaprison-9.mat  common2DPlots.m  compareMatrixSquareSum.m  compareMatrixSquareSum16.mat  compareMatrixSquareSum20.mat  compareMatrixSquareSum8.mat  comparison-1.mat  comparison-11.mat  comparison-12.mat  comparison-15.mat  comparison-17.mat  comparison-18.mat  comparison-19.mat  comparison-2.mat  comparison-3.mat  comparison-5.mat  comparison-6.mat  comparison-7.mat  editParameters.m  editParametersTest.m  icon.mat  img-file.mat  iter_jacobi.m  jacobiComparison.m  matrixRow2List.m  mean.m  (+12 more)
static/matlab-img/: help-install.png:Zone.Identifier  matrix-sample.jpeg:Zone.Identifier  (+4 more)
static/matlab/easy_dll/easy/for_redistribution_files_only/: CMakeLists.txt  README.md  easy.h  main.c
static/rust/egui-first-try/: Cargo.toml  build.rs  generate_font.py  generate_icon.py  main.rs  text.rs
static/rust/maze-wasm-in-rust/: Cargo.toml  game-js.html  game.html  maze-app.html  maze-js.js  maze.css  maze.js
static/rust/maze-wasm-in-rust/.cargo/: config.toml
static/rust/maze-wasm-in-rust/pkg/: hello_wasm.js  hello_wasm_bg.wasm
static/rust/maze-wasm-in-rust/src/: lib.rs
temp-files/: 010-functions.md  011-functions.md  011.lisp  1AM.md  20240923-3.stl  L99.html  alexandria-help.ipynb  all-external-symbols.md  autolisp-tutor.fas  autolisp-tutor.lsp  blockWithCavity.m  compiled-functions.md  feaTutor.m  fea_thermal_transient.md  funcs.lisp  helloworld.prj  htBwC.m  leftUpper.m  lexical-binding.md  lexical-closure.lisp  lisp-filesystem.ipynb  lisp.ipynb  macro-form.md  matlab-class-diagram.md  matlab-fem.md  matlab-symb.md  matrix_dancing_in_Matlab中的矩阵体操.md  mrsmss.md  objFunc.m  optimisitic-lexical-closure.md  piecewiseFunc.m  piecewiseFuncVec.m  plotResults.m  prompt.md  qFcn.m  simple-quicklisp-library.ipynb  smart-classify-symbols.md  special-forms.md  special-operators.md  subMatrix.m  (+5 more)
(+415 files in other folders)
