[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"
wasm-bindgen = "0.2"
getrandom = { version = "0.2.10", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "s"
lto = true
